2008-03-06  David Bateman  <dbateman@free.fr>

	* DLD-FUNCTIONS/matrix_type.cc (Fmatrix_type): Document that
	the initial interpretation of a positive definite return from
	matrix_type is that the matrix is "probably" positive definite and
	not certainly so.

2008-03-06  John W. Eaton  <jwe@octave.org>

	* parse.y: Move tests here from test/test_eval.m.
	* DLD-FUNCTIONS/fft.cc: Move tests here from test/test_signal.m.
	* DLD-FUNCTIONS/dassl.cc: Move tests here from test/test_diffeq.m.
	* DLD-FUNCTIONS/lsode.cc: Move tests here from test/test_diffeq.m.
	* DLD-FUNCTIONS/quad.cc: Move tests here from test/test_quad.m.
	* DLD-FUNCTIONS/time.cc: Move tests here from test/test_system.m.

2008-03-06  Alexander Barth  <barth.alexander@gmail.com>

	* DLD-FUNCTIONS/__lin_interpn__.cc (lookup):
	Handle decreasing coordinate values.

2008-03-05  Jaroslav Hajek <highegg@gmail.com>

	* DLD-FUNCTIONS/chol.cc (Fcholupdate): Adjust code to meet 
	Octave's coding guidelines.

	* DLD-FUNCTIONS/qr.cc (Fqrupdate, Fqrinsert, Fqrdelete): Adjust 
	code to meet Octave's coding guidelines.
	* DLD-FUNCTIONS/qr.cc (Fqrdelete): Fix incorrect test. 

	* DLD-FUNCTIONS/qr.cc (Fqrinsert, Fqrdelete): Modify to use
	0-based indexing in liboctave's QR classes.

2008-03-04  Jaroslav Hajek <highegg@gmail.com>

	* DLD-FUNCTIONS/chol.cc (Fcholupdate): New function.

	* DLD-FUNCTIONS/qr.cc (Fqrupdate, Fqrinsert, Fqrdelete):
	New functions.

2008-03-04  Ryan Rusaw  <rrusaw@gmail.com>

	* toplev.h (octave_call_stack::element): New static function.
	(octave_call_stack::cs): Now std::deque instead of std::list.

	* pt-stmt.cc (curr_statement, curr_caller_statement): Delete.
	* pt-stmt.h: Delete decls.

	* pt-stmt.h, pt-stmt.cc (tree_statement_stack): New class.

	* pt-stmt.cc (tree_statement::eval): Use tree_statement_stack
	instead of curr_statement variable.

	* ov-usr-func.cc (octave_user_function::do_multi_index_op):
	Don't set curr_caller_statement.
